= RubyMotion 2.38 =

  * Fixed a few cases where the Yosemite version number was parsed incorrectly.
  * Added support for `axel' as an alternative to `curl' when downloading
    updates, which supports resuming and uses 10 connections to improve speed.
    Axel is available from http://wilmer.gaast.net/main.php/axel.html or can be
    installed through Homebrew: `$ brew install axel'.
  * Fixed a regression where `rake spec' did not work on OS X platform.
  * Fixed a bug where Dispatch.once did not work correctly with x86_64 on
    iPhone simulator and i386 on OS X platforms.
  * Fixed a bug where `:cflags' for `:static' vendored projects could not
    override those set by the toolchain by default. E.g. `-fno-modules'.

= RubyMotion 2.37 =

  * Fixed a regression where Dispatch.once did not work correctly when it was
    invoked in some points.
  * Fixed a bug where the compiler would crash with an assertion message
    `[BUG] Object: SubtypeUntil ...' when compiling certain Ruby files.
  * Fixed a bug in the compiler when compiling for ARM64 where certain types
    would still be emitted with a 32-bit architecture in mind.
  * Fixed a bug in the compiler when compiling for ARM64 where certain structs
    would not be properly available (such as NSDecimal).

= RubyMotion 2.36 =

  * Added ARM64 support (64-bit) for iOS. It is not yet enabled by default for
    applications that do not embed Frameworks or App Extensions. In order to
    enable it on other builds add the following line to your project's Rakefile:
    app.archs['iPhoneOS'] |= ['arm64']
  * iOS 4.3 and OS X 10.7 are no longer supported, due to internal changes
    that require us to use a newer C++ standard library.
  * [iOS] Fixed a bug where the `app.provisioning_profile' setting would not be
    configurable in the Rakefile of App Extensions projects.
  * Fixed a bug when copying an `ImmediateRef', which isn't needed anyways,
    because a tagged pointer can not be duplicated either.